--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/locatinTVText|"/>
+        android:text="@string/locationTVText"/>
 
-    <Spinner
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spLocations">
 
-    </Spinner>
+    </ListView>
 
     <TextView
         android:layout_width="match_parent"
